plugins {
	id 'net.fabricmc.fabric-loom' version '1.15.5'
	id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
	archivesName = project.archives_base_name
}

repositories {
	maven {
		name = 'TerraformersMC'
		url = 'https://maven.terraformersmc.com/releases/'
	}
	mavenCentral()
}

loom {
	splitEnvironmentSourceSets()

	mods {
		diggusmaximus {
			sourceSet sourceSets.main
			sourceSet sourceSets.client
		}
	}

	runs {
		client {
			client()
			name = 'Diggus Maximus Client 26.2'
			runDir = 'run/client'
		}
		server {
			server()
			name = 'Diggus Maximus Server 26.2'
			runDir = 'run/server'
		}
	}
}

fabricApi {
	configureTests {
		createSourceSet = true
		modId = 'diggusmaximus_gametest'
		enableGameTests = false
		enableClientGameTests = true
		eula = true
		clearRunDirectory = true
		username = 'DiggusGameTest'
	}
}

dependencies {
	minecraft "com.mojang:minecraft:${project.minecraft_version}"
	implementation "net.fabricmc:fabric-loader:${project.loader_version}"
	implementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

	// Optional client integration only. Core and dedicated-server execution do not depend on Mod Menu.
	clientCompileOnly "com.terraformersmc:modmenu:${project.modmenu_version}"

	testImplementation platform('org.junit:junit-bom:5.12.2')
	testImplementation 'org.junit.jupiter:junit-jupiter'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

processResources {
	def properties = [
		version: project.version,
		minecraft_version: project.minecraft_version,
		loader_version: project.loader_version,
		fabric_version: project.fabric_version
	]
	inputs.properties properties
	filteringCharset = 'UTF-8'

	filesMatching("fabric.mod.json") {
		expand properties
	}
}

tasks.withType(JavaCompile).configureEach {
	options.encoding = 'UTF-8'
	options.release = 25
}

test {
	useJUnitPlatform()
}

java {
	toolchain.languageVersion = JavaLanguageVersion.of(25)
	sourceCompatibility = JavaVersion.VERSION_25
	targetCompatibility = JavaVersion.VERSION_25
	withSourcesJar()
}

jar {
	from("LICENSE") {
		rename { "${it}_${project.base.archivesName.get()}" }
	}
}
